# skill-desktop

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: agents.ts  projects.ts  skill-readme.ts  skills.ts
src/components/: add-project-dialog.tsx  empty-state.tsx  install-dialog.parse.test.ts  install-dialog.parse.ts  install-dialog.tsx  update-dialog.tsx
src/components/main-pane/: main-header.tsx  main-pane.tsx  search-box.tsx  skill-list.tsx  skill-row.tsx
src/components/sidebar/: agent-filter-section.tsx  scope-section.tsx  section-label.tsx  sidebar.tsx  theme-toggle.tsx
src/components/skill-detail/: skill-detail-drawer.tsx
src/components/ui/: dialog.tsx  kit.tsx  markdown.tsx  menu.tsx  toast.tsx  toaster.tsx
src/hooks/: use-active-scope.ts  use-installed-agents.ts  use-projects.ts  use-scopes.ts  use-sidebar-counts.ts  use-skill-readme.ts  use-skills.ts  use-updater.ts  use-visible-skills.ts
src/lib/: agents.ts  filter-skills.test.ts  filter-skills.ts  filter-store.test.ts  filter-store.ts  projects.test.ts  projects.ts  scope-store.ts  skill-detail-store.ts  skill-md.test.ts  skill-md.ts  theme.ts  toast-store.ts  types.ts
